# Minesweepper-

./: CMakeLists.txt  main.cpp  minesweeper.cpp  minesweeper.h  minesweeper.ui  resources.qrc
